gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15785.d
version https://git-lfs.github.com/spec/v1
oid sha256:cf8172d6231a67abf08c1829b0a7c61ebc9fd4df3cb580d9adf781cec663854d
size 426
